syntax = "proto3";
package gc.garcol.exchange.proto;
option java_outer_classname = "BalanceProto";

import "common.proto";

message Asset {
  string asset = 1; // USDT, BTC, ETH, ...
  BigDecimal availableAmount = 2;
  BigDecimal lockAmount = 3;
  OptimisticLock version = 4;
}

message Balance {
  int64 ownerId = 1;
  map<string, Asset> assets = 2;
  OptimisticLock version = 3;
}
